challanges/devops/ci-cd/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
spec:
  backend:
    serviceName: jenkins
    servicePort: 8080
